Fix the gap between the headers and paragraphs

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -71,12 +71,11 @@ header {
   }
 }
 .summary {
-  height: 340px;
   padding: 140px 0 0 150px;
   flex-basis: 50%;
   @media(max-width: 900px) {
     font-size: 23px;
-    padding: 100px 10px 0 10px;
+    padding: 50px 10px 0 10px;
     margin-bottom: 12px;
   }
   @media(max-width: 400px) {
@@ -109,7 +108,7 @@ header {
   background-color: $grey-color;
   padding: 140px 0 0 150px;
   @media(max-width: 900px) {
-    padding: 100px 10px 0 10px;
+    padding: 50px 10px 0 10px;
   }
   h2 {
     font-size: 30px;
@@ -186,7 +185,7 @@ header {
 .languages {
   padding: 140px 0 0 150px;
   @media(max-width: 828px) {
-    padding: 110px 10px 0 10px;
+    padding: 50px 10px 0 10px;
   }
   h2 {
     font-size: 30px;
@@ -207,16 +206,15 @@ header {
   }
 }
 .references {
-  width: 100%;
-  height: 250px;
   padding: 140px 0 0 150px;
   background-color: #f9f9f9;
   @media(max-width: 900px) {
-    padding: 100px 10px 0 10px;
+    padding: 50px 10px 0 10px;
   }
   h3 {
     @media(max-width: 900px) {
       font-size: 23px;
+      margin-bottom: 20px;
     }
   }
   .links {
